# staad-pro-3d-generator

./: .gitignore  LICENSE  README.md  SPACE_README.md  VIDEO_SCRIPT.md  WRITEUP.md  app.py  dataset-metadata.json  notebook.ipynb  pyproject.toml  requirements.txt
_kaggle_kernel/: kernel-metadata.json  notebook.ipynb
data/: BulkStore.json  Jebel_Ali_Industrial_Area.json  RMStore.json  RSC-ARC-101-R0_AISC.json  S-2447-BANSWARA.json  example_minimal.json  knitting-plant.json
docs/: demo_data.js  index.html
media_gallery/: VIDEO_DEMO_SCRIPT.md
staad_generator/: __init__.py  __main__.py  _version.py  ai_parser.py  boq.py  fea_verify.py  geometry.py  logutil.py  qrf.py  section_optimizer.py  spec.py  validate.py  writer.py
tests/: conftest.py  test_pipeline.py  test_validate.py
